# bloom-scroll

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ECOSYSTEM.md  README.md  docker-compose.yml  enclii.yaml  llms-full.txt  llms.txt  package-lock.json
.github/workflows/: build-deploy.yml  ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-ml-linux-cpu.txt  requirements-ml-local.txt  test_serendipity.py  test_story_001.py
backend/alembic/: env.py
backend/alembic/versions/: 20251119_0100-001_initial_bloom_cards_table.py  20251119_0200-002_add_pgvector_index_and_user_interactions.py  20260716_0100-003_add_score_provenance.py
backend/app/: main.py  worker.py
backend/app/analysis/: processor.py  scoring.py
backend/app/api/: ingestion.py  interactions.py  routes.py
backend/app/core/: auth.py  cache.py  config.py  database.py  error_handlers.py  migrations.py
backend/app/curation/: bloom_algorithm.py
backend/app/ingestion/: __init__.py  aesthetics.py  common.py  narrative.py  neocities.py  openalex.py  owid.py
backend/app/models/: bloom_card.py  user_interaction.py
backend/app/schemas/: bloom_card.py
backend/tests/: conftest.py  test_app_config.py  test_auth.py  test_content_connectors.py  test_dependency_lock.py  test_feed_pagination.py  test_feeds.py  test_health.py  test_ingestion_gauntlet.py  test_openalex_ingestion.py  test_perspective_scoring.py  test_schema_convergence.py  test_write_auth.py
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DESIGN_SYSTEM.md  ROADMAP.md  STABILITY_SESSION_2026-05-28.md  STABILIZATION_GUIDE.md  STORY-004-IMPLEMENTATION.md  STORY-006-IMPLEMENTATION.md  STORY-007-IMPLEMENTATION.md  brief.md  design_tokens.md  prd.md
docs/stories/: STORY-001.md  STORY-002.md  STORY-003.md
frontend/: Dockerfile  README.md  TEST-STORY-002.md  pubspec.yaml
frontend/lib/models/: bloom_card.dart
frontend/lib/providers/: feed_controller.dart
frontend/lib/screens/: feed_screen.dart
frontend/lib/services/: api_config.dart  api_service.dart
frontend/lib/theme/: bloom_theme.dart
frontend/lib/widgets/: owid_card.dart
frontend/lib/widgets/perspective/: perspective_overlay.dart  serendipity_tag.dart
frontend/test/models/: bloom_card_test.dart
frontend/test/providers/: feed_state_test.dart
frontend/test/services/: api_config_test.dart  storage_service_test.dart
frontend/web/: index.html  manifest.json
infra/argocd/: config.json
infra/k8s/production/: api-deployment.yaml  api-service.yaml  db-init-job.yaml  ingest-cronjob.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  secrets-template.yaml  web-deployment.yaml  web-service.yaml
infrastructure/: README.md  docker-compose.yml
scripts/: load-test.k6.js  prod-smoke.sh
